# rocket-cam

./: .gitignore  CMakeLists.txt  README.md
include/: FreeRTOSConfig.h  altimeter.hpp  ble.hpp  btstack_config.h  debug.hpp  irc_tramp.hpp  osd.hpp  pins.hpp  shared.hpp
src/: CMakeLists.txt  altimeter.cpp  ble.cpp  irc_tramp.cpp  osd.cpp  rocket-cam.cpp  sigma2_cam.gatt  uart_half_duplex.pio
